# svg-path-turtle

./: .gitignore  CMakeLists.txt  DOCUMENTATION.md  LICENSE  Makefile  README.md
examples/code/: flower.turtle  hearts.turtle  house.turtle  octagon.turtle  wiggly_hilbert.turtle
icon/: .gitignore  README.md  background  fish  make_icon  parts  trail  turtle
lib/: library.svgt
src/parser_starter_kit/: BasicTokenizer.h  BasicTokens.h  EasyParser.h  InputBase.h  InputInterface.h  LexerInterface.h  LexicalContext.h  NameInterface.h  ParserBase.h  SourceLocation.h  TokenInterface.h  TokenMap.h  TokenizerBase.h
src/svg_path_turtle/: ASTNode.cpp  ASTNode.h  BasicSVG.cpp  BasicSVG.h  Debug.cpp  Debug.h  DebugSink.h  DoubleToString.cpp  DoubleToString.h  Engine.cpp  Engine.h  EngineStack.h  EngineTypes.h  Expression.h  FileUtil.cpp  FileUtil.h  FrameStack.h  MathUtil.h  Matrix.cpp  Matrix.h  Messages.cpp  Messages.h  Names.h  Options.cpp  Options.h  OstreamTurtle.cpp  OstreamTurtle.h  Parser.cpp  Parser.h  Signature.h  Tokenizer.cpp  Tokenizer.h  Tokens.h  Turtle.cpp  Turtle.h  main.cpp  version.h.in
tests/: arcs  base  booleans  builtin_as_lambda  continuity  curve_continue  decimal_places  ellipse  error_continue  flower  fncall_types  fractal_plant  hearts  hilbert  house  hypotenuse  lib_namespace_test  multi_scene  namespace  no_initial_m  parallel_lines  pen_height_error  player_example  push_pop  q_vert_horiz  reflection  tangent  too_few_args  too_few_args_lambda  unique  z_command  z_direction
tests/closures/: anon_lambdas  basic_closures  for_loop  lambdas
tools/: run_tests  svg_path_turtle_compositor
